<resources>
    <!-- Top level -->
    <string name="app_name">Chorey</string>
    <string name="home_name_placeholder">home_name</string>
    <string name="chore_name_placeholder">chore_name</string>
    <string name="expense_type_placeholder">expense_type</string>
    <string name="expense_name_placeholder">expense_name</string>
    <string name="chorey_logo">chorey_logo</string>

    <!-- Menu Fragment -->
    <string name="add_home_button">Add Home</string>
    <string name="remove_home_button">Delete</string>
    <string name="menu_title_default">Your Homes</string>
    <string name="menu_title_remove">Click to Remove</string>
    <string name="menu_text_empty_recycler">No Homes Yet!</string>
    <string name="menu_title_welcome">Welcome to Chorey!</string>
    <string name="auth_button_login">Login</string>
    <string name="auth_button_logout">Logout</string>
    <string name="menu_arrow_desc">menu_arrow</string>
    <string name="add_home_hint">Click Here To Add More</string>
    <string name="continue_button">Continue</string>
    <string name="create_button">No Schedule</string>

    <!-- Menu Recycler View -->
    <string name="home_item_place_holder">Home</string>
    <string name="home_item_score">Points:</string>
    <string name="home_item_members">Members:</string>
    <string name="home_item_zero">0</string>

    <!-- User Detail Dialog-->
    <string name="user_name_placeholder">user_name</string>
    <string name="user_profile_pic_desc">user_profile_picture</string>
    <string name="user_icon_title">Select an icon</string>
    <string name="user_name_hint">Your name</string>
    <string name="user_detail_submit">Confirm</string>

    <!-- Home Fragment -->
    <string name="home_all_chores_text">Tasks</string>
    <string name="home_history_title">History</string>
    <string name="add_chore_button">Add Task</string>
    <string name="add_note_button">Add Note</string>
    <string name="add_members_button">Invite</string>
    <string name="home_summary_button">Summary</string>
    <string name="home_to_menu_button">Home</string>
    <string name="home_no_chores_left">No Chores left to do!</string>
    <string name="home_history_empty">History empty!</string>
    <string name="home_no_notes_left">No Notes yet</string>
    <string name="home_loading">Loading…</string>
    <string name="home_summary_title">Summary</string>
    <string name="home_summary_title_points">Top Contributors:</string>
    <string name="home_notes_title">Notice Board</string>
    <string name="home_active_chores_button">Active</string>
    <string name="home_history_chores_button">History</string>

    <!-- Chore Recycler View -->
    <string name="chore_item_name">Chore</string>
    <string name="chore_item_assignee_text">Assigned:</string>
    <string name="chore_item_assignee">User</string>
    <string name="chore_item_due_text">Due:</string>
    <string name="chore_item_due">Time</string>
    <string name="chore_item_completed">Done</string>

    <!-- Bottom navigation -->
    <string name="chore_icon_desc">Chores</string>
    <string name="notice_board_icon_desc">Board</string>
    <string name="expense_icon_desc">Funds</string>
    <string name="summary_icon_desc">Summary</string>

    <!-- Home Detail Dialog   -->
    <string name="home_detail_icon_desc">home_icon</string>

    <!-- Expense detail dialog -->
    <string name="contrib_recycler_empty">Contributions this period</string>
    <string name="expense_detail_add_contrib">Pay</string>
    <string name="expense_type_add_expense">Add</string>
    <string name="expense_edit_title">Edit Expense</string>
    <string name="expense_edit_amount">Amount</string>
    <string name="expense_edit_per">$</string>

    <!-- History Recycler View -->
    <string name="history_item_name">Chore</string>
    <string name="history_item_assignee_text">Completed by:</string>
    <string name="history_item_assignee">User</string>
    <string name="history_item_due_text">Completed:</string>
    <string name="history_item_due">Time</string>

    <!-- Fund Fragment   -->
    <string name="expense_rent_button">Rent</string>
    <string name="expense_utilities_button">Utilities</string>
    <string name="expense_groceries_button">Groceries</string>
    <string name="expense_household_items_button">Household</string>
    <string name="expense_fun_button">Fun</string>
    <string name="expense_other_button">Other</string>
    <string name="expense_empty_progress">0/0</string>

    <!-- Add Home Dialog -->
    <string name="create_home_button">Create</string>
    <string name="join_existing_home_button">Join</string>
    <string name="add_home_dialog_title">Add Home</string>
    <string name="add_home_dialog_hint">Join an existing home or create your own!</string>

    <!-- Create Home Dialog -->
    <string name="create_home_title">Create New Home!</string>
    <string name="create_home_yes">Create</string>
    <string name="create_home_no">Cancel</string>
    <string name="create_home_hint">Enter Home name:</string>

    <!-- Remove Home Confirmation Dialog -->
    <string name="confirm_remove_yes">Remove</string>
    <string name="confirm_remove_no">Cancel</string>

    <!-- Join Home dialog -->
    <string name="join_home_your_invites_full">Invites</string>
    <string name="join_home_your_invites_empty">No Pending Invites!</string>
    <string name="join_home_request_invite_button">Request Invite!</string>
    <string name="join_home_ask_for_invite">Ask someone to invite you to their home</string>
    <!-- Join Home Recycler View-->
    <string name="join_home_sent_by_name">user_name</string>
    <string name="join_home_sent_by_text">From:</string>
    <string name="join_home_accept_invite_desc">Accept Invite</string>
    <string name="join_home_remove_invite_desc">Remove Invite</string>

    <!-- Chore Detail Dialog -->
    <string name="chore_detail_title_create">Create a new task</string>
    <string name="chore_detail_title_time">Assign a schedule</string>
    <string name="chore_detail_title_edit">Edit Chore:</string>
    <string name="create_chore_name_hint">Task Name</string>
    <string name="create_chore_description_hint">Description (optional)</string>
    <string name="chore_detail_name_text">What needs to get done?</string>
    <string name="chore_detail_spinner_text">Template:</string>
    <string name="create_chore_edit_button">Done</string>
    <string name="create_chore_remove_button">Remove</string>
    <string name="chore_detail_assign_text">Which members will share this task?</string>
    <string name="chore_detail_assign_text_short">Shared by:</string>
    <string name="chore_detail_assign_hint">Select members</string>
    <string name="chore_detail_due_text">Due:</string>
    <string name="chore_detail_repeats">Yes</string>
    <string name="chore_detail_timed_text">Schedule a specific time?</string>
    <string name="chore_detail_timed">No time scheduled</string>
    <string name="chore_detail_due_untimed">As needed</string>
    <string name="chore_detail_due_date_hint">Select Date</string>
    <string name="chore_detail_due_time_hint">Select Time</string>
    <string name="chore_detail_repeats_text">How does the task repeat?</string>
    <string name="chore_detail_at">at</string>
    <string name="chore_detail_time_to_complete">Time needed:</string>
    <string name="chore_detail_reward">Reward:</string>
    <string name="chore_detail_add_everyone">Everyone</string>
    <string name="chore_detail_add_me">Just Me</string>
    <string name="chore_detail_fixed_schedule">Schedule</string>
    <string name="repeat_interval_no">It Doesn\'t</string>
    <string name="repeat_interval_as_needed">As needed</string>
    <string name="repeat_interval_daily">Daily</string>
    <string name="repeat_interval_weekly">Weekly</string>
    <string name="repeat_interval_monthly">Monthly</string>
    <string name="repeat_interval_annually">Annually</string>
    <string name="back_button">Back</string>
    <string name="return_to_menu_button">Menu</string>

    <!-- History Detail Dialog -->
    <string name="history_detail_title">Completed Chore</string>
    <string name="history_detail_name_text">Name:</string>
    <string name="history_detail_completed_by">Done by:</string>
    <string name="history_detail_due_text">Done:</string>
    <string name="history_detail_timed_text">Fixed schedule?</string>
    <string name="history_detail_time_to_complete">Done in:</string>
    <string name="history_detail_time_mins">min</string>
    <string name="history_detail_reward">Reward:</string>

    <!-- Add Member Dialog -->
    <string name="add_member_dialog_title">Invite User</string>
    <string name="add_member_dialog_yes">Send</string>
    <string name="add_member_dialog_no">Cancel</string>
    <string name="add_member_dialog_hint">Enter User name:</string>

    <!-- Note Detail Dialog-->
    <string name="note_detail_title_create">Create Note</string>
    <string name="note_detail_title_edit">Edit Note</string>
    <string name="note_detail_note_text">Type here…</string>
    <string name="note_detail_create_button">Create</string>
    <string name="note_detail_edit_button">Edit</string>
    <string name="note_detail_update_button">Update</string>
    <string name="note_detail_cancel_button">Cancel</string>
    <string name="note_detail_remove_button">Remove</string>
    <string name="add_icon_description">add_icon</string>

    <!-- Debugging -->
    <string-array name="home_names">
        <item>@string/home_name_placeholder</item>

        <item>White House</item>
        <item>Parents\' house</item>
        <item>Co-living Space</item>
        <item>Office</item>
        <item>Bouncy Castle</item>
        <item>Dog Shelter</item>
    </string-array>

    <string-array name="chore_names">
        <item>Take out the trash</item>
        <item>Walk the Elephant</item>
        <item>Wash the dishes</item>
        <item>Vacuum</item>
        <item>Clean the windows</item>
    </string-array>
</resources>