<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardStyle"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/choreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:flow_horizontalAlign="center"
                android:text="@string/chore_item_name"
                />

            <TextView
                android:id="@+id/choreAssignedToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choreName"
                android:text="@string/chore_item_assignee_text"
                />

            <TextView
                android:id="@+id/choreAssignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/choreName"
                app:layout_constraintStart_toEndOf="@id/choreAssignedToText"
                android:text="@string/chore_item_assignee"
                />

            <TextView
                android:id="@+id/choreDueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choreAssignedToText"
                android:text="@string/chore_item_due_text"
                />

            <TextView
                android:id="@+id/choreDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/choreDueText"
                app:layout_constraintBottom_toBottomOf="@id/choreDueText"
                app:layout_constraintStart_toEndOf="@id/choreDueText"
                android:text="@string/chore_item_due"
                />

            <Button
                android:id="@+id/choreDoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/chore_item_completed" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>