<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".fragments.chorecreation.CreateChoreTimeFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/choreTitleLayout"
        android:background="?attr/colorPrimaryDark"
        >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/imageButtonStyle"
            android:contentDescription="@string/home_item_place_holder"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_margin="@dimen/line_space_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/fui_transparent"
            android:padding="2dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            />

        <TextView
            android:id="@+id/createChoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/chore_detail_title_time"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="@dimen/line_space_large"
            />

        <ImageButton
            android:id="@+id/cancelButton"
            style="?attr/imageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/note_detail_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_close_24"
            android:layout_marginEnd="@dimen/line_space_large"
            android:layout_marginTop="@dimen/line_space_large"
            android:padding="2dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            />

        <View
            android:id="@+id/choreDetailTitleLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutline"
            android:layout_marginTop="@dimen/line_space_large"
            app:layout_constraintTop_toBottomOf="@id/createChoreTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CalendarView
        android:id="@+id/dateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chore_detail_fixed_schedule"
        app:layout_constraintTop_toBottomOf="@id/choreTitleLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/scheduleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateCalendar"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:text="@string/chore_detail_timed"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/repeatLayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduleText"
        android:layout_marginTop="@dimen/line_space_large"
        android:text="@string/chore_detail_repeats_text"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:visibility="invisible" />

        <TextView
            android:id="@+id/repeatNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_interval_no"
            android:background="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/repeatLayoutTitle"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            app:drawableLeftCompat="@drawable/baseline_close_24"
            android:drawablePadding="5dp"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

        <TextView
            android:id="@+id/repeatAsNeeded"
            app:drawableLeftCompat="@drawable/baseline_repeat_24"
            android:text="@string/repeat_interval_as_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/repeatLayoutTitle"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            android:background="@color/white"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

        <TextView
            android:id="@+id/repeatDaily"
            android:text="@string/repeat_interval_daily"
            app:drawableLeftCompat="@drawable/baseline_sun_24"
            app:layout_constraintTop_toBottomOf="@id/repeatNo"
            app:layout_constraintEnd_toStartOf="@id/repeatWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            android:background="@color/white"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

        <TextView
            android:id="@+id/repeatWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_interval_weekly"
            app:layout_constraintTop_toBottomOf="@id/repeatAsNeeded"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            android:background="@color/white"
            app:drawableLeftCompat="@drawable/baseline_weekend_24"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

        <TextView
            android:id="@+id/repeatMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_interval_monthly"
            app:layout_constraintTop_toBottomOf="@id/repeatAsNeeded"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            android:background="@color/white"
            app:drawableLeftCompat="@drawable/baseline_calendar_24"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

        <TextView
            android:id="@+id/repeatAnnually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_interval_annually"
            app:layout_constraintStart_toEndOf="@id/repeatMonthly"
            app:layout_constraintTop_toBottomOf="@id/repeatAsNeeded"
            android:background="@color/white"
            app:drawableLeftCompat="@drawable/baseline_cake_24"
            android:textColor="@color/black"
            app:drawableTint="@color/black"
            android:layout_marginVertical="@dimen/line_space_large"
            android:layout_marginHorizontal="@dimen/line_space"
            />

    <Button
        android:id="@+id/completeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_home_button"
        style="?attr/buttonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/line_space"
        app:backgroundTint="?attr/colorPrimaryContainer"
        />
</androidx.constraintlayout.widget.ConstraintLayout>