<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/homeDetailPicture"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:srcCompat="@drawable/home_icon1"
        android:layout_marginTop="@dimen/line_space_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeDetailName"
        android:contentDescription="@string/home_detail_icon_desc"
        />

    <TextView
        android:id="@+id/homeDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/line_space"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/large_text_size"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeDetailPicture"
        app:layout_constraintBottom_toTopOf="@id/nameDivider"
        android:text="@string/home_name_placeholder" />

    <ImageButton
        android:id="@+id/homeEditIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_edit_24"
        android:scaleY="0.7"
        android:scaleX="0.7"
        android:background="@drawable/dialog_background_outlined"
        app:layout_constraintStart_toEndOf="@id/homeDetailPicture"
        app:layout_constraintTop_toTopOf="@id/homeDetailPicture"
        app:layout_constraintBottom_toTopOf="@id/homeDetailPicture"
        android:foregroundGravity="center"
        android:translationZ="1dp"
        app:tint="@color/black"
        android:contentDescription="@string/create_chore_edit_button"
        />

    <View
        android:id="@+id/nameDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/homeDetailName"
        android:layout_marginVertical="@dimen/line_space"
        />

    <TextView
        android:id="@+id/homeDetailMembersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/homeDetailMembers"
        app:layout_constraintBottom_toTopOf="@id/removeHomeButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/home_item_members" />

    <TextView
        android:id="@+id/homeDetailMembers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/homeDetailMembersText"
        app:layout_constraintTop_toTopOf="@id/homeDetailMembersText"
        app:layout_constraintBottom_toBottomOf="@id/homeDetailMembersText"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/user_name_placeholder" />

    <ImageButton
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_add_24"
        style="?attr/imageButtonStyle"
        app:layout_constraintStart_toEndOf="@id/homeDetailName"
        app:layout_constraintBottom_toTopOf="@id/homeDetailName"
        android:padding="3dp"
        android:layout_marginBottom="-15dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/add_members_button" />

    <Button
        android:id="@+id/removeHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_home_button"
        style="?attr/buttonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeDetailMembersText"
        android:layout_marginVertical="@dimen/line_space"
        />
</androidx.constraintlayout.widget.ConstraintLayout>