<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.CreateHomeDialog">


    <TextView
        android:id="@+id/createHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/createHomeNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/create_home_title" />

    <Button
        android:id="@+id/createHomeCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_home_yes"
        app:layout_constraintTop_toBottomOf="@id/createHomeNameInput"
        app:layout_constraintStart_toEndOf="@id/createHomeDialogLine"
        />

    <Button
        android:id="@+id/createHomeCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_home_no"
        app:layout_constraintTop_toBottomOf="@id/createHomeNameInput"
        app:layout_constraintEnd_toStartOf="@id/createHomeDialogLine"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/createHomeDialogLine"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createHomeNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_home_hint" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
